Change a bug on the design on mobile devices

--- a/src/routes/components/SearchForm.css
+++ b/src/routes/components/SearchForm.css
@@ -4,7 +4,7 @@ div.form-search {
   top: 0;
   left: 0;
   z-index: 200;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   background-color: rgba(0, 0, 0, 0.458);
